test/sema/positive/impl_after_usage2.impala
trait T {
    fn neg(self: Self) -> Self;
}
impl T for bool {
    fn neg(self: bool) -> bool { if self { false } else { true } }
}

impl bool {
    fn f(self: bool) -> bool { self.neg() }
}
