test/sema/negative/trait_impls2.impala
trait T {
    fn f(self: Self) -> ();
}
impl T for bool {
}
